--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
           </button>
           <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
             <a class="navbar-brand" href="#">
-              <img src="logo.png" alt="Logo" width="40" height="40">
+              <img src="poto/logo.png" alt="Logo" width="40" height="40">
               DakonTourism
             </a>
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
@@ -23,10 +23,16 @@
                 <a class="nav-link active" aria-current="page" href="#">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Link</a>
+                <a class="nav-link" href="index2.html">Activity</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link disabled" aria-disabled="true">Disabled</a>
+                <a class="nav-link" href="index3.html">Galery</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="index4.html">Contact</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="index5.html">About us</a>
               </li>
             </ul>
             <form class="d-flex" role="search">
@@ -46,19 +52,19 @@
             </div>
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <img src="inggr.jpg" class="d-block w-100" alt="...">
+                <img src="poto/inggr.jpg" class="d-block w-100" alt="...">
                 <div class="carousel-caption d-none d-md-block">
                   <h5>Here some photo's</h5>
                 </div>
               </div>
               <div class="carousel-item">
-                <img src="inggris.jpg" class="d-block w-100" alt="...">
+                <img src="poto/inggris.jpg" class="d-block w-100" alt="...">
                 <div class="carousel-caption d-none d-md-block">
                   <h5>Here some photo's</h5>
                 </div>
               </div>
               <div class="carousel-item">
-                <img src="ingg.jpg" class="d-block w-100" alt="...">
+                <img src="poto/ingg.jpg" class="d-block w-100" alt="...">
                 <div class="carousel-caption d-none d-md-block">
                   <h5>Here some photo's</h5>
                 </div>
@@ -94,7 +100,7 @@
         <div class="row justify-content-center">
           <div class="col-md-4">
             <div class="card" style="width: 18rem;">
-              <img src="Card 1.jpg" class="card-img-top" alt="...">
+              <img src="poto/Card 1.jpg" class="card-img-top" alt="...">
               <div class="card-body">
                 <h5 class="card-title">Dublin, Ireland</h5>
                 <p class="card-text">The capital of Ireland, Dublin is a vibrant city known for its literary heritage, lively pub scene, and historical landmarks.</p>
@@ -104,7 +110,7 @@
           </div>
           <div class="col-md-4">
             <div class="card" style="width: 18rem;">
-              <img src="Card 2.jpg" class="card-img-top" alt="...">
+              <img src="poto/Card 2.jpg" class="card-img-top" alt="...">
               <div class="card-body">
                 <h5 class="card-title">Edinburgh, Scotland</h5>
                 <p class="card-text">The capital of Scotland, Edinburgh is renowned for its stunning architecture, rich history, and cultural festivals.</p>
@@ -114,7 +120,7 @@
           </div>
           <div class="col-md-4">
             <div class="card" style="width: 18rem;">
-              <img src="Card 3.jpg" class="card-img-top" alt="...">
+              <img src="poto/Card 3.jpg" class="card-img-top" alt="...">
               <div class="card-body">
                 <h5 class="card-title">London, England</h5>
                 <p class="card-text"> London, the capital of England and the United Kingdom, is a bustling metropolis known for its blend of historical landmarks and modern attractions.</p>
